--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_BACKEND_API_URL=http://127.0.0.1:8000/api
+VITE_BACKEND_IMAGES_URL=http://127.0.0.1:8000/storage/
 BASE_URL=http://127.0.0.1:5173
