--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsdom": "^20.0.1",
     "postcss": "^8.4.19",
     "prettier": "2.7.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.2.4",
     "vite": "^3.1.8",
