--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
+    "@vee-validate/i18n": "^4.7.3",
     "@vee-validate/rules": "^4.7.3",
     "axios": "^1.2.0",
     "pinia": "^2.0.23",
