--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 VITE_BACKEND_API_URL=http://127.0.0.1:8000/api
 VITE_BACKEND_IMAGES_URL=http://127.0.0.1:8000/storage/
 BASE_URL=http://127.0.0.1:5173
+VITE_PUSHER_APP_KEY=38fe87fffe31b7afebfe
+VITE_PUSHER_APP_CLUSTER=eu
+VITE_PUSHER_PORT=5173
+VITE_PUSHER_HOST=127.0.0.1
+VITE_PUSHER_APP_SECRET=b26d32ddd14aeada1776
