--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.7.0",
     "jsdom": "^20.0.1",
+    "laravel-echo": "^1.14.2",
     "postcss": "^8.4.19",
     "prettier": "2.7.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
+    "pusher-js": "^7.5.0",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.2.4",
     "vite": "^3.1.8",
